--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -136,6 +136,10 @@ view{box-sizing:border-box;}
     align-items:flex-start;
     flex-direction: column;
 }
+.acea-row.row-between-wrapper-first{
+    /*align-items:flex-start;*/
+    flex-direction: column;
+}
 .font-color{color:#fc4141!important;}
 .bg-color{background-color:#1296DB!important;}
 .icon-color{color:#ff3c2b;}
