--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -177,8 +177,8 @@ button::after{border:0;}
 .loadingicon .loading {animation: load linear 1s infinite;font-size:45px ;color:#000;}
 .loadingicon{width:100%;height:80px ;}
 .suggess-css{
-    padding:0 30px ;
-    width: 100%;
+    padding:2px 10px ;
+    text-align: left;
 }
 
 .title-padding{
@@ -259,4 +259,22 @@ button::after{border:0;}
     max-height: 100%;
     color: white;
     font-weight: bold;
+}
+.bottom-view {
+    width: 100%;
+    padding: 60px 0;
+    /*position: fixed;*/
+    bottom: 0;
+    left: 0;
+}
+.copy-view{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.copy-item{
+    font-size: 15px;
+    color: #999;
 }
