--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -177,6 +177,10 @@ button::after{border:0;}
 .loadingicon .loading {animation: load linear 1s infinite;font-size:45px ;color:#000;}
 .loadingicon{width:100%;height:80px ;}
 .suggess-css{
+    padding:0 30px ;
+    width: 100%;
+}
+.result-suggess-css{
     padding:2px 10px ;
     text-align: left;
 }
